[gd_scene load_steps=2 format=3 uid="uid://bflqq7imudxag"]

[ext_resource type="Script" uid="uid://c2xb72j2der50" path="res://Scripts/GUI/pause_menu.gd" id="1_k3w1p"]

[node name="PauseMenu" type="Window"]
process_mode = 3
title = "Pause Menu"
initial_position = 1
size = Vector2i(140, 205)
script = ExtResource("1_k3w1p")

[node name="Continue" type="Button" parent="."]
offset_left = 3.0
offset_top = 1.0
offset_right = 137.0
offset_bottom = 32.0
text = "Continue"

[node name="Settings" type="Button" parent="."]
offset_left = 3.0
offset_top = 35.0
offset_right = 137.0
offset_bottom = 66.0
text = "Settings"

[node name="LoadLevel" type="Button" parent="."]
offset_left = 3.0
offset_top = 69.0
offset_right = 137.0
offset_bottom = 100.0
text = "Load Level"

[node name="ExportLevel" type="Button" parent="."]
offset_left = 3.0
offset_top = 103.0
offset_right = 138.0
offset_bottom = 134.0
text = "Export Level"

[node name="Quit" type="Button" parent="."]
offset_left = 3.0
offset_top = 172.0
offset_right = 138.0
offset_bottom = 203.0
text = "Quit"

[node name="ClearLevel" type="Button" parent="."]
offset_left = 3.0
offset_top = 137.0
offset_right = 138.0
offset_bottom = 168.0
text = "Clear Level"

[connection signal="close_requested" from="." to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="LoadLevel" to="." method="_on_load_level_pressed"]
[connection signal="pressed" from="ExportLevel" to="." method="_on_export_level_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ClearLevel" to="." method="_on_clear_level_pressed"]
